Slightly reducing font size for alphabetical labels to prevent cutoff

--- a/style.css
+++ b/style.css
@@ -279,7 +279,7 @@ input.puburl {
 h2.sortall_letter {
 	display: block;
     float: left;
-    font-size: 55px;
+    font-size: 53px;
     font-weight: 100;
     height: 55px;
     margin-bottom: 0;
